--- a/FXMLDocument.fxml
+++ b/FXMLDocument.fxml
@@ -72,7 +72,10 @@
       </Pane>
       <Pane fx:id="tstart" layoutX="232.0" layoutY="126.0" prefHeight="534.0" prefWidth="890.0" style="-fx-background-color: #DCDCDC;">
          <children>
-            <Label layoutX="23.0" layoutY="23.0" text="STRONA GŁÓWNA" />
+            <Label layoutX="23.0" layoutY="23.0" prefHeight="51.0" prefWidth="290.0" text="STRONA GŁÓWNA">
+               <font>
+                  <Font name="Arial Black" size="14.0" />
+               </font></Label>
             <Label layoutX="592.0" layoutY="61.0" text="LICZBA ZDANYCH - PODZIAŁ NA TERMINY" />
             <BarChart fx:id="wykres1" layoutX="46.0" layoutY="78.0" prefHeight="301.0" prefWidth="408.0">
               <xAxis>
@@ -96,8 +99,8 @@
       </Pane>
       <Pane layoutX="232.0" layoutY="1.0" prefHeight="126.0" prefWidth="890.0">
          <children>
-            <Label layoutX="57.0" layoutY="96.0" text="LICZBA UDUPIEŃ " />
-            <Label layoutX="258.0" layoutY="94.0" text="LICZBA ZDANYCH" />
+            <Label layoutX="57.0" layoutY="96.0" text="LICZBA ZDANYCH " />
+            <Label layoutX="258.0" layoutY="94.0" text="LICZBA UDUPIEŃ" />
             <Label layoutX="644.0" layoutY="94.0" text="STOSUNEK ZDANYCH DO UDPIONYCH" />
             <Label fx:id="pasekZdane" layoutX="78.0" layoutY="18.0" text="20">
                <font>
@@ -127,7 +130,20 @@
       </Pane>
       <Pane fx:id="tpomoc" layoutX="233.0" layoutY="126.0" prefHeight="534.0" prefWidth="890.0" style="-fx-background-color: #DCDCDC;" visible="false">
          <children>
-            <Label layoutX="23.0" layoutY="23.0" text="POMOC" />
+            <Label layoutX="74.0" layoutY="30.0" prefHeight="37.0" prefWidth="85.0" text="POMOC">
+               <font>
+                  <Font name="Arial Black" size="14.0" />
+               </font></Label>
+            <Label layoutX="201.0" layoutY="356.0" text="Brak treści pomocy w tej wersji." textFill="#bc4444">
+               <font>
+                  <Font name="System Bold" size="36.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="214.0" fitWidth="216.0" layoutX="315.0" layoutY="122.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@deer-icon.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane fx:id="pasek" layoutX="232.0" layoutY="126.0" prefHeight="534.0" prefWidth="890.0" style="-fx-background-color: #DCDCDC;" visible="false">
@@ -147,8 +163,11 @@
       </Pane>
       <Pane fx:id="tdodaj" layoutX="233.0" layoutY="126.0" prefHeight="534.0" prefWidth="890.0" style="-fx-background-color: #DCDCDC;" visible="false">
          <children>
-            <Label layoutX="23.0" layoutY="23.0" text="DODAWANIE NOWYCH WYNIKÓW" />
-            <Pane layoutX="87.0" layoutY="95.0" prefHeight="281.0" prefWidth="287.0">
+            <Label layoutX="61.0" layoutY="40.0" prefHeight="49.0" prefWidth="281.0" text="DODAWANIE NOWYCH WYNIKÓW">
+               <font>
+                  <Font name="Arial Black" size="14.0" />
+               </font></Label>
+            <Pane layoutX="55.0" layoutY="93.0" prefHeight="291.0" prefWidth="353.0">
                <children>
                   <Button fx:id="dodajdobazy" layoutX="153.0" layoutY="128.0" mnemonicParsing="false" onAction="#kdodajdobazy" prefHeight="102.0" prefWidth="87.0" text="Dodaj" />
                   <TextField fx:id="indeks" layoutX="94.0" layoutY="49.0" />
@@ -163,6 +182,21 @@
                   <Label layoutX="14.0" layoutY="206.0" text="Wynik 3" />
                </children>
             </Pane>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="525.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@giraffe-icon.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="98.0" fitWidth="93.0" layoutX="687.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@sheep-icon.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="98.0" fitWidth="104.0" layoutX="402.0" layoutY="262.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@tiger-icon.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
